# oregon-trail

./: Documentation.md  hie.yaml  oregon-trail.cabal
app/: Main.hs
src/: Events.hs  GameState.hs  Locations.hs  Options.hs  Resources.hs  Shop.hs  State.hs  StateMonad.hs  Text.hs  Trace  Trace.hs  UserCommands.hs
src/State/: RandomGen.hs  State.hs  StateMonad.hs
test/: EventsT.hs  GameStateT.hs  LocationsT.hs  Main.hs  OptionsT.hs  ResourcesT.hs  ShopT.hs  Testing.hs  TraceT.hs
