cabal-version:  2.2
name:           oregon-trail
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/oregon-trail#readme>
homepage:       https://github.com/githubuser/oregon-trail#readme
bug-reports:    https://github.com/githubuser/oregon-trail/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/oregon-trail

common common-stanza
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
  build-depends:
      base >=4.15,
      fin >= 0.3,
      natural-arithmetic >= 0.1
    , HUnit 
    , QuickCheck
    , containers
    , filepath
    , pretty
    , network
    , directory
    , random
    , mtl
  default-language:
    GHC2021
  default-extensions:


library
  import:
      common-stanza
  exposed-modules:
      State
      StateMonad
      GameState
      Text
      Events
      Options
      Locations
      Shop
      Trace
  hs-source-dirs:
      src
      test

executable oregon-trail-exe
  import:
      common-stanza
  main-is: 
      Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      oregon-trail


test-suite oregon-trail-test
  import:
      common-stanza
  type: 
      exitcode-stdio-1.0
  main-is:
      Testing.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      oregon-trail
  other-modules:
      GameStateT

